Ingress/Ingress-ExternalDNS-AKS/Ingress-Service/Ingress-sc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rajdevopslearn.online
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app1.rajdevopslearn.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app1-nginx-clusterip-service
                port: 
                  number: 80
    - host: app2.rajdevopslearn.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-nginx-clusterip-service
                port: 
                  number: 80
    - host: app.rajdevopslearn.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: usermgmt-webapp-clusterip-service
                port: 
                  number: 80
